--- a/config/sofle-layout.dtsi
+++ b/config/sofle-layout.dtsi
@@ -1,7 +1,7 @@
 #include <physical_layouts.dtsi>
 
 / {
-    layout_0: layout_0 {
+    default_transform: default_transform {
         compatible = "zmk,physical-layout";
         display-name = "Default";
 
