--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -7,9 +7,8 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <layouts/josefadamcik/sofle.dtsi>
 
-&josefadamcik_sofle_layout {
+&sofle_layout {
     transform = <&default_transform>;
-};
 
 / {
     chosen {
