--- a/config/sofle-layout.dtsi
+++ b/config/sofle-layout.dtsi
@@ -1,7 +1,7 @@
 #include <physical_layouts.dtsi>
 
 / {
-    default_transform: default_transform {
+    sofle_layout: sofle_layout {
         compatible = "zmk,physical-layout";
         display-name = "Default";
 
