--- a/config/sofle.dtsi
+++ b/config/sofle.dtsi
@@ -6,7 +6,7 @@
 
 #include <dt-bindings/zmk/matrix_transform.h>
 #include "sofle-layout.dtsi"
-
+#include <physical_layouts.dtsi>
 
 &sofle_layout {
     transform = <&default_transform>;
