--- a/build.yaml
+++ b/build.yaml
@@ -19,3 +19,7 @@ include:
     shield: sofle_right
   - board: nice_nano_v2
     shield: settings_reset
+# ZMK STUDIO enable here 
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: mystery_ms60_studio
