--- a/build.yaml
+++ b/build.yaml
@@ -20,4 +20,4 @@ include:
 # ZMK STUDIO enable here 
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
-    artifact-name: mystery_sofle_studio
+    artifact-name: sofle_studio
