--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -19,6 +19,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
 CONFIG_WS2812_STRIP=y
 
+# ZMK Studio lock
+CONFIG_ZMK_STUDIO_LOCKING=n 
+
 # Uncomment the line below to disable external power toggling by the underglow.
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
